--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,14 @@
 [submodule "auth-service"]
 	path = auth-service
 	url = https://github.com/roshan798/pizza-delivery-app-auth-service
+
 [submodule "catalog service"]
 	path = catalog service
 	url = https://github.com/roshan798/pizza-delivery-catalog-service
+
+[submodule "order-service"]
+	path = order-service
+	url = https://github.com/roshan798/pizza-delivery-order-service
 
 [submodule "admin-dashboard"]
 	path = admin-dashboard
