add Kafka configuration and update related documentation

--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     },
     "scripts": {
         "dev": "npm run start:all",
-        "start:all": "concurrently \"npm run start:auth\" \"npm run start:catalog\" \"npm run start:admin\" \"npm run start:kong\"",
-        "stop:all": "concurrently \"npm run stop:auth\" \"npm run stop:catalog\"",
+        "start:all": "concurrently \"npm run start:auth\" \"npm run start:catalog\" \"npm run start:admin\" \"npm run start:kong\" \"npm run start:broker\"",
+        "stop:all": "concurrently \"npm run stop:auth\" \"npm run stop:catalog\" \"npm run stop:kong\" \"npm run stop:broker\"",
         "start:auth": "cd auth-service && docker ps -q -f name=mernpg-container >nul 2>&1 && npm run dev || (npm run start:DB && npm run dev)",
         "stop:auth": "cd auth-service && npm run stop:DB",
         "start:catalog": "cd \"catalog service\" && docker ps -q -f name=mernmongo-container >nul 2>&1 && npm run dev || (npm run start:DB && npm run dev)",
@@ -20,6 +20,8 @@
         "start:admin": "cd admin-dashboard && npm run dev",
         "start:kong": "cd docker-kong/compose && cross-env KONG_DATABASE=postgres docker-compose --profile database up",
         "stop:kong": "cd docker-kong/compose && docker-compose down",
+        "start:broker": "cd brokers && docker-compose up -d",
+        "stop:broker": "cd brokers && docker-compose down",
         "test": "echo \"Error: no test specified\" && exit 1"
     }
 }
