--- a/.gitmodules
+++ b/.gitmodules
@@ -18,3 +18,6 @@
 	path = client-app
 	url = https://github.com/roshan798/pizza-delivery-client-UI
 
+[submodule "websocket-service"]
+	path = websocket-service
+	url = https://github.com/roshan798/pizza-delivery-websocket-service
